--- a/BlogWebSite/Views/Blog/List.cshtml
+++ b/BlogWebSite/Views/Blog/List.cshtml
@@ -1,8 +1,8 @@
-﻿@using BlogWebSite.Models.ViewModels
+﻿
 @{
     ViewData["Title"] = "Index";
 }
-@model List<Blog>
+@model List<BlogViewModel>
 <a asp-controller="Manage" asp-action="Create" class="btn btn-primary">Ürün Ekle</a>
 <table class="table">
     <thead>
@@ -25,14 +25,14 @@
                 <td>@item.Title</td>
                 <td>@item.Content</td>
                 <td>@item.IsPublish</td> 
-                <td><img src="/pictures/@item.Poster"/></td>           
+                @*<td><img src="/pictures/@item.Poster"/></td>           *@
                 <td>
                     <input class="form-check-input" type="checkbox" disabled @(item.IsPublish ? "checked" : "")>
                 </td>
                 <td>@item.Category.Name</td>
                 <td>
-                    <a asp-controller="Manage" asp-action="Update" asp-route-id="@item.Id" >Güncelle</a>
-                    <a asp-controller="Manage" asp-action="Delete" asp-route-id="@item.Id">Sil</a>    
+                    <a asp-controller="Blog" asp-action="Update" asp-route-id="@item.Id" >Güncelle</a>
+                    <a asp-controller="Blog" asp-action="Delete" asp-route-id="@item.Id">Sil</a>    
                 </td>
             </tr>  
         }
