--- a/BlogWebSite/Views/Blog/Update.cshtml
+++ b/BlogWebSite/Views/Blog/Update.cshtml
@@ -1,10 +1,10 @@
-﻿@using BlogWebSite.Models.ViewModels
+﻿
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model BlogUpdateViewModel
+@model BlogUpdateModel
 
-<form asp-controller="Blog" asp-action="Update" method="post">
+<form asp-controller="Blog" asp-action="Update" method="post" enctype="multipart/form-data">
     <select class="form-select" asp-items="@ViewBag.selectList" asp-for="CategoryId">
     </select>
 
@@ -17,13 +17,15 @@
     </div>
     <div class="mb-3">
         <label asp-for="Content" class="form-label">İçerik :</label>
-        <textarea class="form-control" asp-for="Content"></textarea>
+        <textarea class="form-control" asp-for="Content" rows="15"></textarea>
         <span class="text-danger" asp-validation-for="Content"></span>
     </div>
 
      <div class="mb-3">
-        <label asp-for="photo" class="form-label">Poster :</label>
-        <input class="form-control" name="photo" asp-for="photo" type="file">
+         <img id="preview_image" class="card-img-top img-fluid" style="margin-bottom:10px;width:400px" alt="..." src="data:image/png;base64, @ViewBag.Poster">
+         <br />
+        <label asp-for="Poster" class="form-label">Poster :</label>
+        <input id="poster" class="form-control" name="Poster" asp-for="Poster" type="file">
     </div>
 
 
@@ -40,6 +42,19 @@
 <br />
 <br /> 
 <form asp-controller="Blog" asp-action="Delete" method="post">
-    <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Sil</button>
+    <input id="blogid" type="hidden" asp-for="Id" />
+    <button type="submit" class="btn btn-danger" onclick="Confirm()">Sil</button>
 </form>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript">
+        function Confirm() {
+            var idInput = $("#blogid");
+            if (confirm("Silmek istediğinize emin misiniz?")) {
+                
+            } else {
+                idInput.val(-1);
+            }
+
+        }
+    </script>
